--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ font-family: 'Poppins', sans-serif;
 body{
   width: 100vw;
   height: 100vh;
-  background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(../images/img.jpg.jpeg);
+  background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url(../images/img2.jpg.jpeg);
   background-size: cover;
   background-position: center;
   color:#fff;
